// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly flat 1`] = `
<button
  className="root
        priorityFlat
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly label visibility 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantPrimary
        
        
        withLabelHidden"
  disabled={false}
  onClick={null}
  title="button"
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly mandatory props only 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly priority 1`] = `
<button
  className="root
        priorityOutline
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly size 1`] = `
<button
  className="root
        priorityDefault
        sizeLarge
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly variant 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantSuccess"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly with all props 1`] = `
<button
  className="root
        priorityFlat
        sizeLarge
        variantSuccess
        isRootBlock
        withIconAfter
        withLabelHiddenMobile"
  disabled={true}
  onClick={null}
  title="button"
  type="button"
>
  <span
    className="icon
            iconLoading"
  >
    <Icon
      icon="sync"
      size="large"
    />
  </span>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly with icon 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantPrimary
        
        withIconBefore"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="icon"
  >
    <Icon
      icon="album"
      size="medium"
    />
  </span>
  <span
    className="label"
  >
    button
  </span>
</button>
`;
